===========



Changes in detail
-----------------
Modified:
CWinThread::GetMainWnd			now returns HWND
CWinThread::SetMainWnd			now accepts HWND

These functions are now public:
CWinApp::GetCWndFromMap
CWinApp::GetTlsData
CWinApp::SetTlsData

Added
CFrame::GetInitValues
CFrame::SetInitValues

Removed:
CFrame::GetShowCmd
CFrame::GetShowStatusBar
CFrame::GetShowToolBar
CFrame::SetShowCmd


Version 8.1
===========

Important
---------
The definition of the following virtual functions have changed. You will 
need to update your code as accordingly. The current definitions are:
- CWnd::OnCreate(CREATESTRUCT& cs)
- CWnd::PreTranslateMessage(MSG& Msg)
- CThread::PreTranslateMessage(MSG& Msg)
Also:
- SDI Frame applications which require docking support should use CDockFrame.
- MDI Frame applications which require docking support should use CMDIDockFrame.
- CArchive and CFile now throw CFileExceptions
- CFile::Open throws a CFileException on failure and returns void.

New Features and Enhancements
----------------------------- 
* Added DDX/DDV
  CDataExchange provides support for Dialog Data eXchange(DDX) and Dialog Data 
  Validation(DDV). The CDataExchange class has a set of DDX and DDV member
  functions which perform the data exchange and validation for different types
  of controls. Typically this is used for controls in dialogs, but controls in
  any window support DDX and DDV.
  
  To use CDataExchange, perform the following steps:
   - Override DoDataExchange and specify the appropriate DDX and DDV functions.
   - Call UpdateData(FALSE) to initialize the controls and assign their values.
     This is typically done in the dialog's OnInitDialog function.
   - Call UpdateData(TRUE) to validate and retrieve the control data.	

  Refer to the DDXDemo sample for a demonstration of how to use CDataExchange

* Extended CString
   CString is now based on the CStringT template.
   CStringA is defined as CStringT<CHAR>. It is an ANSI only version of CString